--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -15,7 +15,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:id="@+id/editTextFormula"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:textSize="18sp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -26,7 +27,8 @@
         android:layout_alignParentStart="true"
         android:id="@+id/editTextAnswer"
         android:layout_alignParentEnd="true"
-        android:inputType="none" />
+        android:inputType="none"
+        android:textSize="30sp" />
 
     <TableLayout
         android:layout_height="match_parent"
