--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="none"
-        android:text="512 + 678 / 17"
+        android:text="512-678*17"
         android:ems="10"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
