--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -6,35 +6,27 @@
     android:layout_height="match_parent"
     tools:context="com.saititsdclub.simplecalculator.Main">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="none"
-        android:text="512-678*17"
-        android:ems="10"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/editTextFormula"
-        android:layout_alignParentEnd="true"
-        android:textSize="18sp"
-        android:textAlignment="textEnd" />
+        android:id="@+id/textScrollView" >
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="551.88235294117647058823529411765"
-        android:ems="10"
-        android:layout_below="@+id/editTextFormula"
-        android:layout_alignParentStart="true"
-        android:id="@+id/editTextAnswer"
-        android:layout_alignParentEnd="true"
-        android:inputType="none"
-        android:textSize="30sp"
-        android:textAlignment="textEnd" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/textView" >
+
+        </LinearLayout>
+    </ScrollView>
 
     <TableLayout
         android:layout_height="match_parent"
-        android:layout_below="@+id/editTextAnswer"
+        android:layout_below="@+id/textScrollView"
         android:layout_alignParentStart="true"
         android:layout_width="wrap_content">
 
