--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -37,7 +37,7 @@
             android:layout_weight="1">
 
             <Button
-                android:text="C"
+                android:text="CE"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/editTextAnswer"
